3-26-26 jenkins/05-rtb.tf
# =============================================================================
# Route Tables
# =============================================================================

# Public — default route via IGW
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.jenkins_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name        = "jenkins-public-rt"
    environment = "dev"
    owner       = "thedawgs"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

# Private — default route via NAT GW (outbound only, no inbound from internet)
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.jenkins_vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name        = "jenkins-private-rt"
    environment = "dev"
    owner       = "thedawgs"
  }
}

resource "aws_route_table_association" "private" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}
